--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -74,7 +74,7 @@
                 <i class="fa-sharp fa-solid fa-floppy-disk"></i> Guardar
             </button>
 
-            <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El usuario a sido dado de alta con exito</p>
+            <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El usuario ha sido dado de alta con exito</p>
 
         </div>
       </form>
