Add user with validation

--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -75,7 +75,7 @@
             </button>
 
             <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El usuario ha sido dado de alta con exito</p>
-
+            <p class="error_message" id="error_message"></p>
         </div>
       </form>
       <script src="../static/js/altaUsuarioValidaciones.js"></script>
