--- a/src/main/resources/static/buscarUsuarioUI.html
+++ b/src/main/resources/static/buscarUsuarioUI.html
@@ -65,30 +65,10 @@
       <div class="show_results" id="show_results">
         <h4>Resultados de la búsqueda: Seleccione un usuario </h4>
           <div class="container_radio_buttons">
-            <ul class="list-group">
+            <ul class="list-group" id="list-users">
               <li class="list-group-item">
                 <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="firstRadio" checked>
                 <label class="form-check-label" for="firstRadio">First radio</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="secondRadio">
-                <label class="form-check-label" for="secondRadio">Second radio</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="thirdRadio">
-                <label class="form-check-label" for="thirdRadio">Third radio</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="firstRadio" checked>
-                <label class="form-check-label" for="firstRadio">First radio</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="secondRadio">
-                <label class="form-check-label" for="secondRadio">Second radio</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="radio" name="listGroupRadio" value="" id="thirdRadio">
-                <label class="form-check-label" for="thirdRadio">Third radio</label>
               </li>
             </ul>
         </div>
