--- a/src/main/resources/static/buscarUsuarioUI.html
+++ b/src/main/resources/static/buscarUsuarioUI.html
@@ -29,19 +29,19 @@
         <div class="container_fields">     
             <div class="fields" id="field_name">
               <label for="name" class="field_label">Nombre</label>
-              <input class="field_input" type="text" name="name" />
+              <input class="field_input" type="text" name="name" id="name"/>
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
             <div class="fields" id="field_surname">
               <label for="surname" class="field_label">Apellido</label>           
-              <input class="field_input" type="text" name="surname" />       
+              <input class="field_input" type="text" name="surname" id="surname"/>
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
             <div class="fields" id="field_type_document">
               <label for="type_document" class="field_label">Tipo N° documento</label>
-              <select class="group_document" name="lenguajes" id="lang">
+              <select class="group_document" id="type_document">
                   <option value="SELECCIONE" selected>SELECCIONE</option>
                   <option value="DNI">DNI</option>
                   <option value="PASAPORTE">PASAPORTE</option>
@@ -52,7 +52,7 @@
   
             <div class="fields" id="field_dni">
               <label for="n_document" class="field_label">N° documento</label>
-              <input class="field_input" type="number" name="dni" />            
+              <input class="field_input" type="number" name="dni" id="n_document"/>
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
             </div>
 
