--- a/src/main/resources/static/buscarTitularUI.html
+++ b/src/main/resources/static/buscarTitularUI.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buscar usuario</title>
+    <title>Buscar titular</title>
     <!--GoogleFonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,7 @@
     />
     <!--CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilosBuscarUsuario.css" />
+    <link rel="stylesheet" href="./css/estilosBuscarTitular.css" />
     <!--FontAwesome-->
     <script
       src="https://kit.fontawesome.com/0ab9ff7f01.js"
@@ -23,8 +23,8 @@
   </head>
   <body>
     <section class="container">
-      <h2>Buscar usuario</h2>
-      <h4>Complete los campos para filtrar la búsqueda de usuarios</h4>
+      <h2>Buscar titular</h2>
+      <h4>Complete los campos para filtrar la búsqueda de titular</h4>
       <form action="" class="fields_to_complete" id="fields_to_complete">
         <div class="container_fields">     
             <div class="fields" id="field_name">
@@ -95,6 +95,6 @@
       </div>
     </section>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
-    <script src="../static/js/buscarUsuarioValidaciones.js"></script>
+    <script src="../static/js/buscarTitularValidaciones.js"></script>
   </body>
 </html>
