--- a/src/main/resources/static/altaTitularUI.html
+++ b/src/main/resources/static/altaTitularUI.html
@@ -129,7 +129,7 @@
             </button>
 
             <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El titular ha sido dado de alta con exito</p>
-
+            <p class="error_message" id="error_message"></p>
         </div>
       </form>
       <script src="../static/js/altaTitularValidaciones.js"></script>
