--- a/src/main/resources/static/altaTitularUI.html
+++ b/src/main/resources/static/altaTitularUI.html
@@ -29,13 +29,13 @@
         <div class="container_fields">     
             <div class="fields" id="field_name">
               <label for="name" class="field_label">Nombre (*)</label>
-              <input class="field_input" type="text" name="name" />
+              <input id="name" class="field_input" type="text" name="name" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
             <div class="fields" id="field_surname">
               <label for="surname" class="field_label">Apellido (*)</label>           
-              <input class="field_input" type="text" name="surname" />       
+              <input id="surname" class="field_input" type="text" name="surname" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
@@ -52,58 +52,58 @@
   
             <div class="fields" id="field_dni">
               <label for="n_document" class="field_label">N° documento (*)</label>
-              <input class="field_input" type="number" name="dni" />            
+              <input id="n_document" class="field_input" type="number" name="dni" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
             </div>
 
             <div class="fields" id="field_email">
                 <label for="email" class="field_label">E-mail (*)</label>
-                <input class="field_input" type="email" name="email" />            
+                <input id="email" class="field_input" type="email" name="email" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El correo ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_birthday">
                 <label for="birthday" class="field_label">Fecha de nacimiento (*)</label>
-                <input class="field_input" type="date" name="birthday" min="1920-01-01" max="2999-12-31"/>     
+                <input id="birthday" class="field_input" type="date" name="birthday" min="1920-01-01" max="2999-12-31"/>
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La fecha ingresada es incorrecta</p>
             </div>
 
             <div class="fields" id="field_address_street">
                 <label for="street" class="field_label">Calle (*)</label>
-                <input class="field_input" type="text" name="street" />            
+                <input id="street" class="field_input" type="text" name="street" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La calle ingresada no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_address_number">
                 <label for="number" class="field_label">N° (*)</label>
-                <input class="field_input" type="number" name="number" />            
+                <input id="number" class="field_input" type="number" name="number" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El número ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_address_floor">
                 <label for="floor" class="field_label">Piso </label>
-                <input class="field_input" type="number" name="floor" />            
+                <input id="floor" class="field_input" type="number" name="floor" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El piso ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_address_apartment">
                 <label for="apartment" class="field_label">Departamento </label>
-                <input class="field_input" type="char" name="apartment" />            
+                <input id="apartment" class="field_input" type="char" name="apartment" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El departamento ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_address_city">
               <label for="city" class="field_label">Localidad </label>
-              <input class="field_input" type="char" name="city" value="Santa Fe" readonly />        
+              <input id="city" class="field_input" type="char" name="city" value="Santa Fe" readonly />
             </div>
 
             <div class="fields" id="field_address_province">
               <label for="province" class="field_label">Provincia </label>
-              <input class="field_input" type="char" name="province" value="Santa Fe" readonly />            
+              <input id="province" class="field_input" type="char" name="province" value="Santa Fe" readonly />
             </div>
 
             <div class="fields" id="field_blood">
-                <label for="blood" class="field_label">Grupo sanguíneo (*) </label>        
+                <label for="type_blood" class="field_label">Grupo sanguíneo (*) </label>
                 <select class="group_blood" name="type_blood" id="type_blood" onchange="validarInputs()">
                     <option disabled selected>SELECCIONE</option>
                     <option value="A">A</option>
@@ -114,11 +114,20 @@
             </div>
 
             <div class="fields" id="field_rh">
-                <label for="rh" class="field_label">RH (*) </label>        
-                <select class="group_blood" name="type_rh" id="type_rh" onchange="validarInputs()">
+                <label for="type_rh" class="field_label">RH (*) </label>
+                <select class="group_blood" name="type_rh" id="type_rh">
                     <option disabled selected>SELECCIONE</option>
                     <option value="POSITIVO">+</option>
                     <option value="NEGATIVO">-</option>
+                </select>
+            </div>
+
+            <div class="fields" id="field_donor">
+                <label for="donor" class="field_label">Es donante (*) </label>
+                <select class="group_document" name="donor" id="donor">
+                    <option disabled selected>SELECCIONE</option>
+                    <option value="SI">SI</option>
+                    <option value="NO">NO</option>
                 </select>
             </div>
 
