--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -29,13 +29,13 @@
         <div class="container_fields">     
             <div class="fields" id="field_name">
               <label for="name" class="field_label">Nombre (*)</label>
-              <input class="field_input" type="text" name="name" />
+              <input id="name" class="field_input" type="text" name="name" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
             <div class="fields" id="field_surname">
               <label for="surname" class="field_label">Apellido (*)</label>           
-              <input class="field_input" type="text" name="surname" />       
+              <input id="surname" class="field_input" type="text" name="surname" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
             </div>
   
@@ -52,19 +52,19 @@
   
             <div class="fields" id="field_dni">
               <label for="n_document" class="field_label">N° documento (*)</label>
-              <input class="field_input" type="number" name="dni" />            
+              <input id="n_document" class="field_input" type="number" name="dni" />
               <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
             </div>
 
             <div class="fields" id="field_email">
                 <label for="email" class="field_label">E-mail (*)</label>
-                <input class="field_input" type="email" name="email" />            
+                <input id="email" class="field_input" type="email" name="email" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El correo ingresado no tiene el formato adecuado</p>
             </div>
 
             <div class="fields" id="field_password">
                 <label for="password" class="field_label">Contraseña (*)</label>
-                <input class="field_input" type="password" name="password" />            
+                <input id="password" class="field_input" type="password" name="password" />
                 <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La contraseña debe tener entre 6 y 15 caracteres. Entre ellos al menos un dígito, una minúscula y una mayúscula.</p>
             </div>
 
