--- a/src/main/resources/static/altaTitularUI.html
+++ b/src/main/resources/static/altaTitularUI.html
@@ -126,8 +126,8 @@
                 <label for="donor" class="field_label">Es donante (*) </label>
                 <select class="group_document" name="donor" id="donor">
                     <option disabled selected>SELECCIONE</option>
-                    <option value="SI">SI</option>
-                    <option value="NO">NO</option>
+                    <option value="true">SI</option>
+                    <option value="false">NO</option>
                 </select>
             </div>
 
