--- a/src/main/resources/static/altaTitularUI.html
+++ b/src/main/resources/static/altaTitularUI.html
@@ -109,7 +109,7 @@
                     <option value="A">A</option>
                     <option value="B">B</option>
                     <option value="AB">AB</option>
-                    <option value="0">O</option>
+                    <option value="O">O</option>
                 </select>
             </div>
 
