Delete ids from navbar

--- a/src/main/resources/static/buscarUsuarioUI.html
+++ b/src/main/resources/static/buscarUsuarioUI.html
@@ -38,7 +38,7 @@
                           <a class="nav-link active" aria-current="page" href="#" style="color: black">Inicio</a>
                       </li>
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
                               Licencias
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,7 +46,7 @@
                           </ul>
                       </li>
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
                               Titular
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,7 +55,7 @@
                           </ul>
                       </li>
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
                               Usuario
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
