--- a/src/main/resources/static/buscarTitularUI.html
+++ b/src/main/resources/static/buscarTitularUI.html
@@ -51,7 +51,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="altaTitularUI.html">Alta titular</a></li>
-                  <li><a class="dropdown-item" href="#">Buscar titular</a></li>
+                  <li><a class="dropdown-item" href="buscarTitularUI.html">Buscar titular</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -60,7 +60,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="altaUsuarioUI.html">Alta usuario</a></li>
-                  <li><a class="dropdown-item" href="modificarUsuarioUI.html">Buscar usuario</a></li>
+                  <li><a class="dropdown-item" href="buscarUsuarioUI.html">Buscar usuario</a></li>
                 </ul>
               </li>
             </ul>
