--- a/src/main/resources/static/modificarUsuarioUI.html
+++ b/src/main/resources/static/modificarUsuarioUI.html
@@ -51,7 +51,7 @@
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="altaTitularUI.html">Alta titular</a></li>
-                              <li><a class="dropdown-item" href="#">Buscar titular</a></li>
+                              <li><a class="dropdown-item" href="buscarTitularUI.html">Buscar titular</a></li>
                           </ul>
                       </li>
                       <li class="nav-item dropdown">
@@ -60,7 +60,7 @@
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="altaUsuarioUI.html">Alta usuario</a></li>
-                              <li><a class="dropdown-item" href="modificarUsuarioUI.html">Buscar usuario</a></li>
+                              <li><a class="dropdown-item" href="buscarUsuarioUI.html">Buscar usuario</a></li>
                           </ul>
                       </li>
                   </ul>
@@ -134,7 +134,7 @@
                 <i class="fa-sharp fa-solid fa-floppy-disk"></i> Guardar
             </button>
 
-            <button class="button" id="button_cancel">
+            <button class="button" type="button" id="button_cancel">
                 <i class="fa-sharp fa-solid fa-floppy-disk"></i> Cancelar
             </button>
 
