List in search user

--- a/src/main/resources/static/buscarUsuarioUI.html
+++ b/src/main/resources/static/buscarUsuarioUI.html
@@ -122,10 +122,21 @@
 
       <div class="show_results" id="show_results">
         <h4>Resultados de la búsqueda: Seleccione un usuario </h4>
-          <div class="container_radio_buttons">
-            <ul class="list-group" id="list-users">
-            </ul>
-        </div>
+          <table class="table">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th>Nombre</th>
+                      <th>Apellido</th>
+                      <th>Tipo N° documento</th>
+                      <th>N° documento</th>
+                      <th></th>
+                  </tr>
+              </thead>
+              <tbody id="list-users">
+
+              </tbody>
+        </table>
       </div>
     </section>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
