ModificarTitular and footers

--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -144,5 +144,7 @@
                   crossorigin="anonymous"
           ></script>
       </section>
+      <!-- Footer -->
+      <footer class="text-center"> 2022 © | Design by TripleA</footer>
   </body>
 </html>
