--- a/src/main/resources/static/modificarUsuarioUI.html
+++ b/src/main/resources/static/modificarUsuarioUI.html
@@ -22,7 +22,6 @@
     ></script>
   </head>
   <body>
-
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
               <a class="navbar-brand" href="#">
@@ -79,77 +78,79 @@
               </div>
           </div>
       </nav>
+      <section class="container">
+          <h2>Modificar Usuario</h2>
+          <h4>Complete los campos a modificar</h4>
+          <form action="" class="fields_to_complete" id="fields_to_complete" name="form">
+            <div class="container_fields">
+                <div class="fields" id="field_name">
+                  <label for="name" class="field_label">Nombre (*)</label>
+                  <input class="field_input" type="text" name="name" id="name"/>
+                  <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
+                </div>
 
-    <section class="container">
-      <h2>Modificar Usuario</h2>
-      <h4>Complete los campos a modificar</h4>
-      <form action="" class="fields_to_complete" id="fields_to_complete" name="form">
-        <div class="container_fields">     
-            <div class="fields" id="field_name">
-              <label for="name" class="field_label">Nombre (*)</label>
-              <input class="field_input" type="text" name="name" id="name"/>
-              <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
+                <div class="fields" id="field_surname">
+                  <label for="surname" class="field_label">Apellido (*)</label>
+                  <input class="field_input" type="text" name="surname" id="surname"/>
+                  <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
+                </div>
+
+                <div class="fields" id="field_type_document">
+                  <label for="type_document" class="field_label">Tipo N° documento (*)</label>
+                  <select class="group_document" name="type_document" id="type_document">
+                      <option value="SELECCIONE" selected>SELECCIONE</option>
+                      <option value="DNI">DNI</option>
+                      <option value="PASAPORTE">PASAPORTE</option>
+                      <option value="LU">LU</option>
+                      <option value="LE">LE</option>
+                  </select>
+                </div>
+
+                <div class="fields" id="field_dni">
+                  <label for="n_document" class="field_label">N° documento (*)</label>
+                  <input class="field_input" type="number" name="dni" id="n_document"/>
+                  <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
+                </div>
+
+                <div class="fields" id="field_email">
+                    <label for="email" class="field_label">E-mail (*)</label>
+                    <input class="field_input" type="email" name="email" id="email"/>
+                    <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El correo ingresado no tiene el formato adecuado</p>
+                </div>
+
+                <div class="fields" id="field_password">
+                    <label for="password" class="field_label">Contraseña (*)</label>
+                    <input class="field_input" type="password" name="password" id="password"/>
+                    <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La contraseña debe tener entre 6 y 15 caracteres. Entre ellos al menos un dígito, una minúscula y una mayúscula.</p>
+                </div>
+
+
+                <p class="incomplete_field" id="incomplete_field" ><i class="fa-solid fa-circle-exclamation"></i> Los campos (*) son obligatorios</p>
+
+
+                <button type="submit" class="button" id="button_save">
+                    <i class="fa-sharp fa-solid fa-floppy-disk"></i> Guardar
+                </button>
+
+                <button class="button" type="button" id="button_cancel">
+                    <i class="fa-sharp fa-solid fa-floppy-disk"></i> Cancelar
+                </button>
+
+                <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El usuario ha sido dado de alta con exito</p>
+                <p class="error_message" id="error_message"></p>
             </div>
-  
-            <div class="fields" id="field_surname">
-              <label for="surname" class="field_label">Apellido (*)</label>           
-              <input class="field_input" type="text" name="surname" id="surname"/>
-              <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> No se admiten caracteres especiales. Longitud máxima 30 caracteres</p>
-            </div>
-  
-            <div class="fields" id="field_type_document">
-              <label for="type_document" class="field_label">Tipo N° documento (*)</label>
-              <select class="group_document" name="type_document" id="type_document">
-                  <option value="SELECCIONE" selected>SELECCIONE</option>
-                  <option value="DNI">DNI</option>
-                  <option value="PASAPORTE">PASAPORTE</option>
-                  <option value="LU">LU</option>
-                  <option value="LE">LE</option>
-              </select>
-            </div>
-  
-            <div class="fields" id="field_dni">
-              <label for="n_document" class="field_label">N° documento (*)</label>
-              <input class="field_input" type="number" name="dni" id="n_document"/>
-              <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> Ingrese entre 8 y 10 digitos</p>
-            </div>
+          </form>
+          <script src="../static/js/modificarUsuarioValidaciones.js"></script>
 
-            <div class="fields" id="field_email">
-                <label for="email" class="field_label">E-mail (*)</label>
-                <input class="field_input" type="email" name="email" id="email"/>
-                <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> El correo ingresado no tiene el formato adecuado</p>
-            </div>
-
-            <div class="fields" id="field_password">
-                <label for="password" class="field_label">Contraseña (*)</label>
-                <input class="field_input" type="password" name="password" id="password"/>
-                <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La contraseña debe tener entre 6 y 15 caracteres. Entre ellos al menos un dígito, una minúscula y una mayúscula.</p>
-            </div>
-
-            
-            <p class="incomplete_field" id="incomplete_field" ><i class="fa-solid fa-circle-exclamation"></i> Los campos (*) son obligatorios</p>
-
-            
-            <button type="submit" class="button" id="button_save">
-                <i class="fa-sharp fa-solid fa-floppy-disk"></i> Guardar
-            </button>
-
-            <button class="button" type="button" id="button_cancel">
-                <i class="fa-sharp fa-solid fa-floppy-disk"></i> Cancelar
-            </button>
-
-            <p class="success_message" id="success_message"><i class="fa-solid fa-circle-check"></i> El usuario ha sido dado de alta con exito</p>
-            <p class="error_message" id="error_message"></p>
-        </div>
-      </form>
-      <script src="../static/js/modificarUsuarioValidaciones.js"></script>
-
-        <!--Bootstrap js-->
-        <script
+          <!--Bootstrap js-->
+          <script
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
                 crossorigin="anonymous"
-        ></script>
-    </section>
+          ></script>
+      </section>
+
+      <!-- Footer -->
+      <footer class="text-center"> 2022 © | Design by TripleA</footer>
   </body>
 </html>
