--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -74,7 +74,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
                           <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
-                          <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                          <li class="dropdown-item" id="logout">Cerrar sesión</li>
                       </ul>
                   </ul>
               </div>
