--- a/src/main/resources/static/modificarUsuarioUI.html
+++ b/src/main/resources/static/modificarUsuarioUI.html
@@ -72,7 +72,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
                           <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
-                          <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                          <li><a class="dropdown-item" href="#" id="logout">Cerrar sesión</a></li>
                       </ul>
                   </ul>
               </div>
