--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -120,6 +120,26 @@
         </div>
       </form>
 
+
+      <div class="show_results" id="show_results">
+        <h4>Resultados de la búsqueda: Seleccione un titular </h4>
+        <table class="table">
+          <thead>
+          <tr>
+            <th>#</th>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Tipo N° documento</th>
+            <th>N° documento</th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody id="list-licenseholders">
+          </tbody>
+        </table>
+      </div>
+
+      <!--
       <div class="show_results" id="show_results">
         <h4>Resultados de la búsqueda: Seleccione un titular </h4>
           <div class="container_radio_buttons">
@@ -150,7 +170,7 @@
               </li>
             </ul>
         </div>
-      </div>
+      </div>-->
 
       <div class="type_license">
         <h4>Seleccione tipo de licencia a emitir</h4>
