--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -174,17 +174,20 @@
 
       <div class="type_license">
         <h4>Seleccione tipo de licencia a emitir</h4>
-        <label for="type_license" class="field_label">Seleccione tipo licencia </label>
-        <select class="group_input" name="lenguajes" id="type_license">
-          <option value="CLASE A" selected>SELECCIONE</option>
-          <option value="CLASE A">CLASE A</option>
-          <option value="CLASE B">CLASE B</option>
-          <option value="CLASE C">CLASE C</option>
-          <option value="CLASE D">CLASE D</option>
-          <option value="CLASE E">CLASE E</option>
-          <option value="CLASE F">CLASE F</option>
-          <option value="CLASE G">CLASE G</option>
-        </select>
+        <div class="text-center" style="margin-bottom: 10px">
+          <label for="type_license" class="field_label">Seleccione tipo licencia </label>
+          <select class="group_input" name="lenguajes" id="type_license">
+            <option value="CLASE A" selected>SELECCIONE</option>
+            <option value="CLASE A">CLASE A</option>
+            <option value="CLASE B">CLASE B</option>
+            <option value="CLASE C">CLASE C</option>
+            <option value="CLASE D">CLASE D</option>
+            <option value="CLASE E">CLASE E</option>
+            <option value="CLASE F">CLASE F</option>
+            <option value="CLASE G">CLASE G</option>
+          </select>
+        </div>
+
         <ul class="list-group">
           <li class="list-group-item">
             <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
