--- a/src/main/resources/static/modificarUsuarioUI.html
+++ b/src/main/resources/static/modificarUsuarioUI.html
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="fields" id="field_password">
-                    <label for="password" class="field_label">Contraseña (*)</label>
+                    <label for="password" class="field_label">Contraseña</label>
                     <input class="field_input" type="password" name="password" id="password"/>
                     <p class="error_message"><i class="fa-solid fa-circle-exclamation"></i> La contraseña debe tener entre 6 y 15 caracteres. Entre ellos al menos un dígito, una minúscula y una mayúscula.</p>
                 </div>
