--- a/src/main/resources/static/altaUsuarioUI.html
+++ b/src/main/resources/static/altaUsuarioUI.html
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#" style="color: black">Inicio</a>
+                          <a class="nav-link active" aria-current="page" href="pantallaPrincipal.html" style="color: black">Inicio</a>
                       </li>
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black">
