--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,6 +94,7 @@
         </div>
 
     </section>
+    <script src="../static/js/index.js"></script>
     <!--Bootstrap js-->
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
