Fix redirection to modificar usuario

--- a/src/main/resources/static/buscarUsuarioUI.html
+++ b/src/main/resources/static/buscarUsuarioUI.html
@@ -72,7 +72,7 @@
                           </svg>
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
-                          <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
+                          <li><a class="dropdown-item" id="goProfile" href="">Ver perfil</a></li>
                           <li class="dropdown-item" id="logout">Cerrar sesión</li>
                       </ul>
                   </ul>
