Listado licencias expiradas interfaz

--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -43,6 +43,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="emitirLicenciaUI.html">Emitir licencia</a></li>
+                <li><a class="dropdown-item" href="listadoLicenciasExpiradas.html">Listado licencias expiradas</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -140,7 +141,7 @@
       </div>
       <p class="error_message" id="error_message">El titular seleccionado no cumple con la edad minima de ningun tipo de licencia.</p>
       <div id="emitir-container">
-        <div class="type_license" style="margin-top: 50px;">
+        <div class="type_license" style="...">
           <div class="text-center" style="margin-bottom: 10px" id="type_license_container">
             <label for="type_license" class="field_label" style="margin-right:20px;">Seleccione tipo licencia </label>
             <select class="group_input" name="lenguajes" id="type_license">
