--- a/src/main/resources/static/modificarUsuarioUI.html
+++ b/src/main/resources/static/modificarUsuarioUI.html
@@ -42,6 +42,7 @@
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="emitirLicenciaUI.html">Emitir licencia</a></li>
+                              <li><a class="dropdown-item" href="listadoLicenciasExpiradas.html">Listado licencias expiradas</a></li>
                           </ul>
                       </li>
                       <li class="nav-item dropdown">
