--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -226,7 +226,14 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <embed id="license-pdf" src="" type="application/pdf" width="100%" height="400px" />
+              <div style="text-align:center; margin-right:20px;">
+                <b>Detalle de Licencia Emitida</b>
+                <embed id="license-pdf" src="" type="application/pdf" width="400px" height="500px"/>
+              </div>
+              <div style="text-align:center;">
+                <b>Comprobante de Pago de Licencia</b>
+                <embed id="payment-pdf" src="" type="application/pdf" width="400px" height="500px"/>
+              </div>
           </div>
         </div>
       </div>
