Fix boton emitir

--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -170,7 +170,7 @@
           </ul>
         </div>
         <div style="text-align:center;">
-          <button class="button" id="buttonEmitir" data-bs-toggle="modal" data-bs-target="#emitModal">Emitir</button>
+          <button class="button btn btn-primary disabled" id="buttonEmitir" data-bs-toggle="modal" data-bs-target="#emitModal">Emitir</button>
         </div>
       </div>
     </section>
