--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -248,7 +248,8 @@
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
             crossorigin="anonymous"
     ></script>
-    <script src="../static/js/emitirLicenciaValidaciones.js"></script>
-    <script src="../static/js/generarPDF.js"></script>
+    <script src="js/generarPDF.js"></script>
+    <script src="js/emitirLicenciaValidaciones.js"></script>
+
   </body>
 </html>
