Update license states method

--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -262,6 +262,7 @@
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
             crossorigin="anonymous"
     ></script>
+    <script src="js/updateLicenseStates.js"></script>
     <script src="js/generarPDF.js"></script>
     <script src="js/emitirLicenciaValidaciones.js"></script>
 
