--- a/src/main/resources/static/listadoLicenciasVigentes.html
+++ b/src/main/resources/static/listadoLicenciasVigentes.html
@@ -175,7 +175,8 @@
 <!-- Footer -->
 <footer class="text-center"> 2022 © | Design by TripleA</footer>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
-<script src="../static/js/listadoLicenciasVigentesValidaciones.js"></script>
+<script src="js/updateLicenseStates.js"></script>
+<script src="js/listadoLicenciasVigentesValidaciones.js"></script>
 <!--Bootstrap js-->
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
