--- a/src/main/resources/static/historial.html
+++ b/src/main/resources/static/historial.html
@@ -111,7 +111,7 @@
                 <th>Creada por</th>
             </tr>
             </thead>
-            <tbody id="list-licenses">
+            <tbody id="list-licenses" class="text-center">
             </tbody>
         </table>
     </div>
