--- a/src/main/resources/static/emitirLicenciaUI.html
+++ b/src/main/resources/static/emitirLicenciaUI.html
@@ -140,7 +140,7 @@
           </tbody>
         </table>
       </div>
-      <p class="error_message" id="error_message">El titular seleccionado no cumple con la edad minima de ningun tipo de licencia.</p>
+      <b class="error_message" id="error_message" style="margin-left:80px; font-size:16px;">El titular seleccionado no cumple con la edad minima de ningun tipo de licencia.</b>
       <div id="emitir-container">
         <div class="type_license" style="...">
           <div class="text-center" style="margin-bottom: 10px" id="type_license_container">
