--- a/src/main/resources/static/historial.html
+++ b/src/main/resources/static/historial.html
@@ -119,6 +119,7 @@
             <tbody id="list-licenses" class="text-center">
             </tbody>
         </table>
+        <b style="text-align:center; display:block;" class="d-none" id="error-msg">El titular no posee ninguna licencia.</b>
     </div>
 </section>
 
