--- a/src/main/resources/static/listadoLicenciasVigentes.html
+++ b/src/main/resources/static/listadoLicenciasVigentes.html
@@ -71,7 +71,7 @@
           </svg>
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
-          <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
+          <li><a class="dropdown-item"  id="goProfile">Ver perfil</a></li>
           <li class="dropdown-item" id="logout">Cerrar sesión</li>
         </ul>
       </ul>
@@ -158,13 +158,14 @@
     <table class="table">
       <thead>
       <tr class="table_column">
-        <th>Fecha de expiración</th>
+        <th>#</th>
         <th>Nombre</th>
         <th>Apellido</th>
         <th>N° documento</th>
         <th>Domicilio</th>
-        <th>Fecha de emisión</th>
         <th>Tipo de clase</th>
+        <th>Fecha de emisión</th>
+        <th>Fecha de expiración</th>
         <th>Estado</th>
       </tr>
       </thead>
