--- a/src/main/resources/static/listadoLicenciasExpiradas.html
+++ b/src/main/resources/static/listadoLicenciasExpiradas.html
@@ -71,7 +71,7 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="right: 0">
-                        <li><a class="dropdown-item" href="modificarUsuarioUI.html">Ver perfil</a></li>
+                        <li><a class="dropdown-item"  id="goProfile">Ver perfil</a></li>
                         <li class="dropdown-item" id="logout">Cerrar sesión</li>
                     </ul>
                 </ul>
@@ -110,13 +110,14 @@
             <table class="table">
                 <thead>
                 <tr class="table_column">
-                    <th>Fecha de expiración</th>
+                    <th>#</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>N° documento</th>
                     <th>Domicilio</th>
-                    <th>Fecha de emisión</th>
                     <th>Tipo de clase</th>
+                    <th>Fecha de emisión</th>
+                    <th>Fecha de expiración</th>
                     <th>Estado</th>
                 </tr>
                 </thead>
@@ -129,7 +130,7 @@
     <footer class="text-center"> 2022 © | Design by TripleA</footer>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
     <script src="js/updateLicenseStates.js"></script>
-    <script src="js/emitirLicenciaValidaciones.js"></script>
+    <script src="js/listadoLicenciasExpiradas.js"></script>
     <!--Bootstrap js-->
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
