--- a/src/main/resources/static/listadoLicenciasVigentes.html
+++ b/src/main/resources/static/listadoLicenciasVigentes.html
@@ -153,6 +153,15 @@
         <option value="G">G</option>
       </select>
     </div>
+    <div class="fields" id="field_order">
+      <label for="order" class="field_label">Ordenar:</label>
+      <br>
+      <select id="order" class="field_input" type="text" name="order">
+        <option value="SELECCIONE" selected>SELECCIONE</option>
+        <option value="Ascendentemente">Ascendentemente</option>
+        <option value="Descendentemente">Descendentemente</option>
+      </select>
+    </div>
   </div>
   <div class="show_results" id="show_results">
     <table class="table">
